compiler/tests/invalid_programs/dependent_types/wrong_argument_type.jm
!TypeError

def add(a, b)
  return a + b
end

puts(add(5, 6.8))
